tests/build/fail/widget/module_must_have_inline_items.stderr
error[E0658]: non-inline modules in proc macro input are unstable
 --> $DIR/module_must_have_inline_items.rs:5:1
  |
5 | pub mod widget;
  | ^^^^^^^^^^^^^^^
  |
  = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information

error: only modules with inline content are supported
 --> $DIR/module_must_have_inline_items.rs:5:15
  |
5 | pub mod widget;
  |               ^
